// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useEuiTextDiff is rendered 1`] = `
<Fragment>
  <span
    className="euiTextDiff"
  >
    Orbiting th
    <del
      key="1"
    >
      i
    </del>
    <ins
      key="2"
    >
      o
    </ins>
    s
    <ins
      key="4"
    >
      e
    </ins>
     at a distance of roughly ninety-
    <del
      key="6"
    >
      two
    </del>
    <ins
      key="7"
    >
      nine
    </ins>
     
    <del
      key="9"
    >
      m
    </del>
    <ins
      key="10"
    >
      b
    </ins>
    illion 
    <del
      key="12"
    >
      mile
    </del>
    <ins
      key="13"
    >
      yard
    </ins>
    s is 
    <del
      key="15"
    >
      a
    </del>
    n
    <del
      key="17"
    >
       ut
    </del>
    <ins
      key="18"
    >
      o
    </ins>
    t
    <del
      key="20"
    >
      erly
    </del>
     insignificant 
    <del
      key="22"
    >
      little
    </del>
    <ins
      key="23"
    >
      dwaf
    </ins>
     
    <del
      key="25"
    >
      blu
    </del>
    <ins
      key="26"
    >
      r
    </ins>
    e
    <ins
      key="28"
    >
      d
    </ins>
     green planet whose ape- 
    <del
      key="30"
    >
      de
    </del>
    <ins
      key="31"
    >
      a
    </ins>
    scended life forms are so amazingly primitive that they still think digital 
    <del
      key="33"
    >
      wat
    </del>
    <ins
      key="34"
    >
      clo
    </ins>
    c
    <del
      key="36"
    >
      he
    </del>
    <ins
      key="37"
    >
      k
    </ins>
    s are a pretty neat idea.
  </span>
</Fragment>
`;

exports[`useEuiTextDiff props custom components is rendered 1`] = `
<Fragment>
  <span
    className="euiTextDiff"
  >
    <p
      key="0"
    >
      Orbiting th
    </p>
    <s
      key="1"
    >
      i
    </s>
    <strong
      key="2"
    >
      o
    </strong>
    <p
      key="3"
    >
      s
    </p>
    <strong
      key="4"
    >
      e
    </strong>
    <p
      key="5"
    >
       at a distance of roughly ninety-
    </p>
    <s
      key="6"
    >
      two
    </s>
    <strong
      key="7"
    >
      nine
    </strong>
    <p
      key="8"
    >
       
    </p>
    <s
      key="9"
    >
      m
    </s>
    <strong
      key="10"
    >
      b
    </strong>
    <p
      key="11"
    >
      illion 
    </p>
    <s
      key="12"
    >
      mile
    </s>
    <strong
      key="13"
    >
      yard
    </strong>
    <p
      key="14"
    >
      s is 
    </p>
    <s
      key="15"
    >
      a
    </s>
    <p
      key="16"
    >
      n
    </p>
    <s
      key="17"
    >
       ut
    </s>
    <strong
      key="18"
    >
      o
    </strong>
    <p
      key="19"
    >
      t
    </p>
    <s
      key="20"
    >
      erly
    </s>
    <p
      key="21"
    >
       insignificant 
    </p>
    <s
      key="22"
    >
      little
    </s>
    <strong
      key="23"
    >
      dwaf
    </strong>
    <p
      key="24"
    >
       
    </p>
    <s
      key="25"
    >
      blu
    </s>
    <strong
      key="26"
    >
      r
    </strong>
    <p
      key="27"
    >
      e
    </p>
    <strong
      key="28"
    >
      d
    </strong>
    <p
      key="29"
    >
       green planet whose ape- 
    </p>
    <s
      key="30"
    >
      de
    </s>
    <strong
      key="31"
    >
      a
    </strong>
    <p
      key="32"
    >
      scended life forms are so amazingly primitive that they still think digital 
    </p>
    <s
      key="33"
    >
      wat
    </s>
    <strong
      key="34"
    >
      clo
    </strong>
    <p
      key="35"
    >
      c
    </p>
    <s
      key="36"
    >
      he
    </s>
    <strong
      key="37"
    >
      k
    </strong>
    <p
      key="38"
    >
      s are a pretty neat idea.
    </p>
  </span>
</Fragment>
`;
